Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-158

tolower not defined in stringhelper.cpp

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 0.10.0
    • 0.10.0
    • None
    • None
    • RHEL, gcc 3.3.2

    Description

      On Oct 23, 2006, at 11:04 AM, Jing Zheng wrote on log4cxx-user:

      gcc version 3.2.2 20030222 (Red Hat Linux 3.2.2-5.relocate2)

      ...
      2. stringhelper.cpp: tolower() is not recognized. added "#include <cctype>"
      and then it compiled ok

      Attachments

        Activity

          People

            carnold@apache.org Curt Arnold
            carnold@apache.org Curt Arnold
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: