LOGCXX-158: tolower not defined in stringhelper.cpp