src/stringhelper.cpp
@@ -23,6 +23,7 @@
 #include <apr_strings.h>
 #include <log4cxx/helpers/pool.h>
 #include <log4cxx/private/log4cxx_private.h>
+#include <cctype>
 
 using namespace log4cxx;
 using namespace log4cxx::helpers;
